Revert "feat: set dev environment"
This reverts commit 4a32d2c7bd1c15a044529cb24d270cc6848f8b56.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,20 @@ services:
       - '5432:5432'
 
   # 애플리케이션 서비스
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: mission-practice-01
-  #   environment:
-  #     - PORT=${PORT}
-  #   ports:
-  #     - '3000:3000'
-  #   depends_on:
-  #     - db
-  #     - pgadmin
-  #   volumes:
-  #     - ./src:/app/src
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: mission-practice-01
+    environment:
+      - PORT=${PORT}
+    ports:
+      - '3000:3000'
+    depends_on:
+      - db
+      - pgadmin
+    # volumes:
+    #   - ./src:/app/src
 
   # pgAdmin 서비스 (PostgreSQL 데이터베이스 관리 도구)
   pgadmin:
