--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.8.1",
+    "class-validator": "^0.14.1",
     "prisma": "^5.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
